--- a/app/walkandplay/trunk/client/web/style/wp.css
+++ b/app/walkandplay/trunk/client/web/style/wp.css
@@ -12,12 +12,15 @@ body
 body a
 {
 	color:black;
-	text-decoration:underline;
+	/*text-decoration:underline;*/
+	text-decoration:none;
+	border-bottom:1px dotted #373737;
 }
 body a:hover
 {
-	color:black;
+	/*color:black;*/
 	text-decoration:none;
+	border-bottom:0px;
 }
 
 select
@@ -46,7 +49,6 @@ input, textarea
 	font-family:verdana,sans-serif;
 	padding-left:2px;
 }
-
 
 #map
 {
@@ -141,7 +143,8 @@ input, textarea
 	left:14px;
 	top:72px;
 	height:20px;
-	background-color:#eeeeee;
+	/*background-color:#d5d5d5;*/
+	background-color:#dddddd;
 	
 	/*color:rgb(200,0,15);*/
 	font-size:18px;
@@ -153,6 +156,7 @@ input, textarea
 {
 	right:11px;
 	top:8px;
+	text-align:right;
 }
 
 
@@ -202,6 +206,11 @@ input, textarea
 	color:#e4ba26;
 }
 
+.setbg
+{
+	/*background-color:#d5d5d5;*/
+	background-color:#eeeeee; 
+}
 
 .pane,
 .pane_autosize
@@ -226,6 +235,8 @@ input, textarea
 	font-size:11px;
 	
 	line-height:14px;
+	
+	/*background-color:#ffffff;*/
 	
 	/*border:1px solid red;*/
 }
@@ -285,4 +296,12 @@ input, textarea
 	float:left;
 	width:5px;
 	height:12px;
+}
+
+
+#list_rounds
+{
+	width:208px;
+	height:170px;
+	overflow:auto;
 }
