--- a/app/walkandplay/trunk/client/web/style/wp.css
+++ b/app/walkandplay/trunk/client/web/style/wp.css
@@ -211,6 +211,14 @@ input, textarea
 {
 	color:#e4ba26;
 }
+.o
+{
+	color:rgb(223,128,33)
+}
+.p
+{
+	color:rgb(141,43,203)
+}
 
 .setbg
 {
@@ -229,14 +237,16 @@ input, textarea
 {
 	position:absolute;
 }
-.pane a
+.pane a,
+.pane_autosize a
 {
 	color:black;
 	/*text-decoration:underline;*/
 	text-decoration:none;
 	border-bottom:1px dotted #373737;
 }
-.pane a:hover
+.pane a:hover,
+.pane_autosize a:hover
 {
 	/*color:black;*/
 	text-decoration:none;
@@ -286,38 +296,13 @@ input, textarea
 	padding-left:2px;
 }
 
+
 .location
 {
 	position:absolute;
 	cursor:pointer;
 	/*visibility:hidden;*/
 }
-
-.label
-{
-	float:left;
-	height:12px;
-	max-height:12px;
-	margin:1px;
-}
-.label span
-{
-	height:12px;
-	float:left;
-	background-color:white;
-	/*color:rgb(0,153,204);*/
-	/*color:rgb(0,95,143);*/
-	font-size:10px;
-	line-height:10px;
-	padding:0px 2px;
-}
-.label img
-{
-	float:left;
-	width:5px;
-	height:12px;
-}
-
 
 .list
 {
@@ -360,7 +345,7 @@ input, textarea
 #im_list .mobile
 {
 	float:left;
-	width:140px;
+	width:145px;
 	background-color:white;
 	padding:2px 3px 2px 7px;
 	margin-bottom:10px;
@@ -370,7 +355,7 @@ input, textarea
 {
 	text-align:right;
 	float:right;
-	width:140px;
+	width:145px;
 	background-color:#eeeeee;
 	padding:2px 7px 2px 3px;
 	margin-bottom:10px;
