wnp: back to basics - get a stable playdisplay

--- a/app/walkandplay/trunk/client/phone/resources/polish.css
+++ b/app/walkandplay/trunk/client/phone/resources/polish.css
@@ -177,7 +177,7 @@ focused {
     /*background-image:url(bg-stripe.png);*/
     /*background-repeat:repeat;*/
     font-size: small;
-    /*show-text-in-title: true;*/
+    /*show-text-in-title: false;*/
 }
 
 .defaultScreen {
